# IEEE_IES_tsyp_challenge

./: .gitignore  FOR_JUDGES.md  README.md  SUBMISSION.md
AESS-PCB/: #auto_saved_files#  AESS-PCB-B_Cu.gbr  AESS-PCB-B_Mask.gbr  AESS-PCB-B_Paste.gbr  AESS-PCB-B_Silkscreen.gbr  AESS-PCB-Edge_Cuts.gbr  AESS-PCB-F_Cu.gbr  AESS-PCB-F_Mask.gbr  AESS-PCB-F_Paste.gbr  AESS-PCB-F_Silkscreen.gbr  AESS-PCB-NPTH.drl  AESS-PCB-PTH.drl  AESS-PCB-job.gbrjob  AESS-PCB.kicad_pcb  AESS-PCB.kicad_prl  AESS-PCB.kicad_pro  AESS-PCB.kicad_sch  ~AESS-PCB.kicad_pcb.lck
AI/: README.md
AI/server/: README.md
Firmware/: build.sh
Firmware/src/communication/: ai_interface.cpp  tcp_client.h
Firmware/src/controller/: controller.cpp
Firmware/src/controller/actuators/: adcs.cpp  propultion.h
Firmware/src/controller/sensors/: BQ34Z100.cpp  ina219.cpp  lidar.h
Firmware/src/energy/: energy.h  manager.h
Firmware/src/modules/: ai_navigation.cpp
Hardware/: CMakeLists.txt  DOCUMENTATION.md  README.md
Hardware/src/: main.cpp
Hardware/src/communication/: ai_interface.h  tcp_client.cpp
Hardware/src/controller/: actuator.cpp  device.cpp  device.h  sensor.cpp  sensor.h
Hardware/src/controller/actuators/: adcs.h
Hardware/src/controller/sensors/: BQ34Z100.h  ina219.h  lidar.cpp
Hardware/src/energy/: manager.cpp
Hardware/src/modules/: ai_navigation.h  module.cpp  modules.h  mppt.cpp  mppt.h
operating_system/: flake.nix
